erDiagram
    USERS ||--o{ USER_ROLES : has
    USERS ||--o{ REFRESH_TOKENS : has
    ROLES ||--o{ USER_ROLES : assigned_to
    ROLES ||--o{ ROLE_PERMISSIONS : has
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : has
    
    USERS {
        uuid id PK
        string email UK
        string password_hash
        string first_name
        string last_name
        boolean is_active
        timestamp created_at
    }
    
    ROLES {
        uuid id PK
        string name UK
        string description
    }
    
    USER_ROLES {
        uuid user_id FK
        uuid role_id FK
        timestamp assigned_at
    }
    
    PERMISSIONS {
        uuid id PK
        string name UK
        string resource
        string action
    }
    
    ROLE_PERMISSIONS {
        uuid role_id FK
        uuid permission_id FK
    }
    
    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        string token
        timestamp expires_at
    }

